# DeepLearningLearningSession

DayAndNight/Models/: cifar_train.prototxt  day_and_night_inference.prototxt  day_and_night_train.prototxt  day_to_night_deploy.prototxt  day_to_night_solver.prototxt  day_to_night_train.prototxt  differentiator_solver.prototxt  differentiator_train.prototxt  ectsDeepLearningToyExamplesDayAndNightModelslabeling_deploy.prototxt  ectsDeepLearningToyExamplesDayAndNightModelslabeling_solver.prototxt  ectsDeepLearningToyExamplesDayAndNightModelslabeling_train_test.prototxt  labeling_solver.prototxt  labeling_train.prototxt  siamese_train.prototxt
DayAndNight/Test/: day_and_night_test.py  day_to_night_test.py  differentiator_test.py
DepthDream/Models/: depth_dream_solver.prototxt  depth_dream_train.prototxt
ImageConversion/: CMakeLists.txt  CifarImageExtraction.cpp  ConstantLabel.cpp  Differentiator.cpp  WriteLists.cpp  WritePairs.cpp
Scripts/: AMOS_download.py  AMOS_download.py~  ImageConversion  ImageConversion~  extract_CIFAR_images.sh  train_day_and_night.sh  train_day_and_night.sh~  train_identical.sh  train_plain.sh  train_plain.sh~
caffe/examples/_temp/: file_list.txt  temp.txt
caffe/examples/cifar10/: cifar10_quick_train_test.prototxt  train_quick.sh
caffe/include/caffe/: #layer_factory.hpp#
caffe/include/caffe/layers/: image_data_label_layer.hpp  multi_image_data_layer.hpp  softmax_weighted_loss_layer.hpp
caffe/src/caffe/: data_transformer.cpp
caffe/src/caffe/layers/: image_data_label_layer.cpp  image_data_layer.cpp  multi_image_data_layer.cpp  (+3 more)
(+1 files in other folders)
